--- a/public/settings.html
+++ b/public/settings.html
@@ -22,6 +22,11 @@
     <a href="/settings.html" class="p-2 rounded-full bg-gray-700 flex items-center justify-center hover:bg-pong-green transition">
       ⚙️Settings
     </a>
+    <a href="/friendsRequest.html" class="rounded-full bg-pong-green flex items-center justify-center font-bold">
+      <div id="friendsRequest">
+        friend request
+      </div>
+    </a>
     <button onclick="logout()" class="rounded-full bg-pong-green flex items-center justify-center font-bold">
       ⏻Logout
     </button>
@@ -37,5 +42,9 @@
     </nav>
   </div>
 
+  <!--<script src="/socket.io/socket.io.js"></script>
+  <script src="initializeSocket.js"></script>
+  <script src="login.js"></script>
+	<script src="DOMcontentLoad.js"></script>-->
 </body>
 </html>
