Implement show friend profile feature

--- a/public/friendsRequest.html
+++ b/public/friendsRequest.html
@@ -14,7 +14,7 @@
 			🏓
 		</div>
 		<a href="/" class="rounded-full bg-pong-green flex items-center justify-center font-bold">
-			🎮Game23232323232323232323
+			🎮Game
 		</a>
 		<a href="/profile.html" class="rounded-full bg-pong-green flex items-center justify-center font-bold">
 			👤Profile
