--- a/public/showFriendProfile.html
+++ b/public/showFriendProfile.html
@@ -19,7 +19,7 @@
     <a href="/profile.html" class="rounded-full bg-pong-green flex items-center justify-center font-bold">
       👤Profile
     </a>
-    <a href="/settings.html" class="p-2 rounded-full bg-gray-700 flex items-center justify-center hover:bg-pong-green transition">
+    <a href="/settings.html" class="rounded-full bg-pong-green flex items-center justify-center font-bold">
       ⚙️Settings
     </a>
     <a href="/friendsRequest.html" class="rounded-full bg-pong-green flex items-center justify-center font-bold">
@@ -40,11 +40,10 @@
       <span id="welcomeUser" class="text-gray-300 text-center font-bold text-xl">Settings</span>
       <button>lenguage</button>
     </nav>
+    <div id="friendProfile" class="p-6 text-gray-200"></div>
+    <!-- here have to be the friend profile information it have look nice and properly according to the page -->
   </div>
 
-  <!--<script src="/socket.io/socket.io.js"></script>
-  <script src="initializeSocket.js"></script>
-  <script src="login.js"></script>
-	<script src="DOMcontentLoad.js"></script>-->
+	<script src="showFriendProfile.js"></script>
 </body>
 </html>
