--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <a href="/settings.html" class="rounded-full bg-pong-green flex items-center justify-center font-bold">
       ⚙️Settings
     </a>
-    <a href="/friendsRequest.html" class="p-2 rounded-full bg-gray-700 flex items-center justify-center hover:bg-pong-green transition">
+    <a href="/friendsRequest.html" class="rounded-full bg-pong-green flex items-center justify-center font-bold">
 			<div id="friendsRequest">
 				friend request
 			</div>
