Update friend profile button styles and add checkAuthToken() to each page

--- a/public/profile.html
+++ b/public/profile.html
@@ -137,6 +137,7 @@
   <!-- Scripts -->
   <script src="/socket.io/socket.io.js"></script>
   <script src="initializeSocket.js"></script>
+  <script src="auth.js"></script>
 	<script src="friends.js"></script>
   <script src="profile.js"></script>
 </body>
