--- a/public/friendsRequest.html
+++ b/public/friendsRequest.html
@@ -50,6 +50,7 @@
 
 	<script src="/socket.io/socket.io.js"></script>
 	<script src="initializeSocket.js"></script>
+  	<script src="auth.js"></script>
 	<script src="friends.js"></script>
 </body>
 </html>
