--- a/public/showFriendProfile.html
+++ b/public/showFriendProfile.html
@@ -38,12 +38,12 @@
     <nav class="bg-gray-800 shadow-md p-4 flex justify-between items-center">
       <h1 class="text-2xl font-bold text-pong-green">PongGame</h1>
       <span id="welcomeUser" class="text-gray-300 text-center font-bold text-xl">Settings</span>
-      <button>lenguage</button>
+      <button>lenguages</button>
     </nav>
     <div id="friendProfile" class="p-6 text-gray-200"></div>
-    <!-- here have to be the friend profile information it have look nice and properly according to the page -->
   </div>
 
+  <script src="auth.js"></script>
 	<script src="showFriendProfile.js"></script>
 </body>
 </html>
