--- a/public/index.html
+++ b/public/index.html
@@ -87,7 +87,7 @@
         <div class="bg-gray-800 text-green-400 p-6 rounded-lg text-center shadow-lg">
             <p id="continueMessage" class="mb-4">Do you want to play again?</p>
             <div class="space-x-4">
-                <button id="continueYes" class="bg-green-600 px-4 py-2 rounded-lg hover:bg-green-700">AI🤖</button>
+                <button id="continueYes" class="bg-green-600 px-4 py-2 rounded-lg hover:bg-green-700">Robocot🤖</button>
                 <button id="continueNo" class="bg-red-600 px-4 py-2 rounded-lg hover:bg-red-700">Human👤</button>
             </div>
         </div>
